# src/docs/swagger.json
@@ -4,6 +4,69 @@
         "contact": {}
     },
     "paths": {
+        "/hostname": {
+            "get": {
+                "description": "Get process compose hostname",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Hostname"
+                ],
+                "summary": "Get Hostname",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/live": {
+            "get": {
+                "description": "Check if server is responding",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Liveness"
+                ],
+                "summary": "Liveness Check",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/process/info/{name}": {
+            "get": {
+                "description": "Retrieves the given process and its config",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Process"
+                ],
+                "summary": "Get process config",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Process Name",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Process Config",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/process/logs/{name}/{endOffset}/{limit}": {
             "get": {
                 "description": "Retrieves the process logs",
@@ -129,6 +192,35 @@
                         "description": "Stopped Process Name",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/process/{name}": {
+            "get": {
+                "description": "Retrieves the given process and its status",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Process"
+                ],
+                "summary": "Get process state",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Process Name",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Process State",
+                        "schema": {
+                            "type": "object"
                         }
                     }
                 }
